@@ -108,8 +108,11 @@ def print_versions():
     if tinfo is not None:
         blosc_date = tinfo[2].split()[1]
         print("Blosc version:     %s (%s)" % (tinfo[1], blosc_date))
-        blosc_cnames = tables.blosc_compressor_list()
-        print("Blosc compressors: %s" % (blosc_cnames,))
+        blosc_cinfo = tables.blosc_get_complib_info()
+        blosc_cinfo = [
+            "%s (%s)" % (k, v[1]) for k, v in sorted(blosc_cinfo.items())
+        ]
+        print("Blosc compressors: %s" % ', '.join(blosc_cinfo))
     try:
         from Cython.Compiler.Main import Version as Cython_Version
         print('Cython version:    %s' % Cython_Version.version)
